# governance-cli

./: .gitignore  Cargo.toml  README.md  WORK.md
data/: gateway-upgrade-ecosystem.toml  gateway_ecosystem_upgrade_output.yaml  gateway_ecosystem_upgrade_output_testnet.yaml  gateway_ecosystem_upgrade_stage_proofs.yaml  other.toml
data/349ba7cb/: config-gateway-upgrade-ecosystem.toml  gateway-upgrade-ecosystem.toml  other.toml
data/p2/: gateway-upgrade-ecosystem.toml  tx_hashes.txt
src/: main.rs  traits.rs  verifiers.rs
src/elements/: call_list.rs  deployed_addresses.rs  fixed_force_deployment.rs  force_deployment.rs  governance_stage1_calls.rs  governance_stage2_calls.rs  initialize_data_new_chain.rs  mod.rs  post_upgrade_calldata.rs  protocol_version.rs  set_new_version_upgrade.rs  upgrade_deadline.rs
src/utils/: address_verifier.rs  bytecode_verifier.rs  facet_cut_set.rs  fee_param_verifier.rs  mod.rs  network_verifier.rs  selector_verifier.rs
