[package]
name = "governance-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.7"
alloy = { version = "0.8", features = ["full"] }
chrono = "0.4"
anyhow = { version = "1.0", default-features = false }
colored = "2.2.0"
log = "0.4"
env_logger = "0.10"
reqwest = "0.12.12"
tokio = { version = "1.42.0", features = ["rt-multi-thread"]}
serde_json = "1.0.134"
clap = { version = "4.5.23", features = ["derive"] }
evmole = { version = "0.6.2" }
